Chapter 0 first part and chapter 1
type class instances (TBC)

CH01: TypeClass instance

CH01: typeClass syntax start

Add type class syntax

Basic scalaz and contramap

starting implicits

Implicit functions and classes

Fix exercise path

--- a/ch01.md
+++ b/ch01.md
@@ -1,27 +1,123 @@
 # Chapter 1: Introduction
-Before we begin with Scalaz, we need to learn some base concepts that help us through our journey. These concepts are independent of Scalaz and you may face them across various languages and libraries. Some even root in other FP languages specially Haskell.
+We'll start this chapter by getting familiar with some basic concepts, most of them are abstract Functional Programming concepts that can be seen throughout many languages and tools (specially haskell) and many are borrowed from `Category Theory`. We'll take a quick look upon `Category Theory` in later chapters.
 
-## Typeclass
-A `Typeclass` is a tool that helps us to define a common behaviour (feature) for a variety of types. In scala, we usualy define a typeclass as a generic trait :
-```
+## TypeClass
+A `TypeClass` is a tool that helps us to define a common behaviour (feature) for a variety of types. In scala, we usualy define a TypeClass as a generic trait :
+```SCALA
 trait StringMaker[T] {
   def makeString(t: T): String
 }
 ```
+Now we can define an instance of `StringMaker` for any type we want and use the instances wherever we need.
 In this example, `StringMake` is a __TypeClass__, defined on type `T` and knows how to turn `t`s into strings. In anthor words, an instance of `StringMaker[X]` adds `makeString` behaviour to `x`s.
 For example if we want to have an instance of `StringMaker[Int]` we can defined it as :
-```
+```SCALA
 val intStringMaker = new StringMaker[Int]{ 
   def makeString(t: Int): String = t.toString 
 } 
 ```
 At this point,you may say to yourself that `StringMaker` and `TypeClasses` are nothing but useless! And you're right since Scala has it's built-in `toString` defined in almost every object. But read on and you'll see the magic.
 
-[Cats Documentation](https://typelevel.org/cats/typeclasses.html) defines `Typeclasses` as :
+Next, we'll explore some simple example of `TypeClass`es to understand the concept better.
+
+### Equal
+Lets create a TypeClass called `Equal` that does one thing only; checking for equality :
+```SCALA
+trait Equal[T] {
+  def eq(left: T, right: T) : Boolean
+}
 ```
-Type classes are a powerful tool used in functional programming to enable ad-hoc polymorphism, more commonly known as overloading. Where many object-oriented languages leverage subtyping for polymorphic code, functional programming tends towards a combination of parametric polymorphism (think type parameters, like Java generics) and ad-hoc polymorphism.
+Simple, right ? An instance of `Equal[X]` knows how to compare two instances of `X` together and tell whether they are equal.
+```
+Exercise 1.1: Try to write instances of Equal for a couple of simple types like Int and String and then for a case class like Person
+```
+Checkout [the answer](samples/src/main/scala/samples/ch01/Equal.scala) after you finished.
+
+### Order
+Now try to write another TypeClass for object comparision. This one is called `Order`, an instance of `Order` can not only tell us whether two object are the same, it can tell which one is greater or less than other. We'll 
+```
+Exercise 1.2: Define TypeClass Order[T] that has these features : 'gt' to check that left is greater than right, 'eq' to check that left and right are equal, 'gte' to check that left is greater or equal to right. Also define 'lt' and 'lte' alike.
+Note: How can we use 'Equal' type class that we've defined before?
+Also try to play around with 'Order' and make a few instances for it.
+```
+Checkout [the answer](samples/src/main/scala/samples/ch01/Order.scala) after you finished.
+
+### JsonParser
+Now it's easy to design a simple TypeClass for parsing json values. For now we're just interested in the TypeClass it self, not implementations.
+```
+Exercise 1.3: Design the TypeClass 'JsonParser' that provides two functionalities: 
+1. A function that converts an instance of our desired type to it's corresponding json value (output type would be String)
+2. A function that does exact opposite of the previous function: form a String to our desired type
+```
+Checkout [the answer](samples/src/main/scala/samples/ch01/JsonParser.scala) after you finished.
+
+## TypeClass instances
+By now we have a basic understanding of what a TypeClass is. And also we've seen some TypeClass `instance`s. An `instance` of a TypeClass is the impementation of that TypeClass for a specific type. A TypeClass only defines behaviour and we have to implement the behaviour for all our intended types. 
+
+So if we want to use a TypeClass on a given type, we need a TypeClass instance for that type, which means we need to implement lots and lots of instances of various TypeClasses for our types, which which may cumbersome. But in reality it isn't that hard, because : First, Scalaz includes lots of TypeClasses and lots of TypeClass instances for common types. Second: One of the main characteristics of Functional Programming is compositionality, which enables us to mix existing TypeClasses or TypeClass instances and invent new ones.
+
+## TypeClass syntax
+So let's get back to using TypeClasses. Imagine that we need to use the `Equal` TypeClass that we've defined in exercise 1.1 to compare people.
+```SCALA
+  def peopleAreEqual(p1: Person, p2: Person): Boolean = {
+    personEqual.eq(p1, p2)
+  }
+```
+[Checkout the answer here](samples/src/test/scala/samples/ch01/EqualSimpleTest.scala)
+
+As you can see, even though using typeclass instances is easy, it's a little terse, specially if we have to implement `peopleAreEqual` function every single time that we need this type class and for every and each type (like Person). So let's try to generalize this function a little bit so that it would work independent of target Type.
+
+```SCALA
+  def areEqual[T](left: T, right: T)(implicit equal: Equal[T]): Boolean = {
+    equal.eq(left, right)
+  }
+```
+It's very simple, right? the only thing that `areEqual` does is that it uses an implicit parameter to make working with TypeClasses a little easier(some times this model is called TypeClass interface). Now let us do one final trick:
+```SCALA
+class EqualOps[T](t: T)(implicit equal: Equal[T]) {
+  def ===(other: T): Boolean = equal.eq(t, other)
+}
+
+object EqualSyntax {
+  implicit def toEqualOps[T](t: T)(implicit equal: Equal[T]): EqualOps[T] =
+    new EqualOps(t)
+}
+```
+So, lets break this code into two parts, EqualOps get's a `t` and an instance of `Equal[T]` (implicitly ofcourse) and enables __dot notation__ and a cute little operator to ease our lives. So let's assume that we have a `t: T` and `q: T` that we want to check their equality and we have an implicit instance of `Equal[T]` in context, all we have to do is
+```SCALA
+val eq = new EqualOps(t)
+eq === q // or eq.===(q)
+```
+But it's still al little terse and also misleading!! This way we push whoever that reads our code to believe that we are checking equality of `q` against `eq`, not `t` !!! Here `EqualSyntax` comes to the rescue. the method `toEqualsOps` in `EqualSyntax` is an implicit conversion from a `t: T` into it's corresponding `EqualOps[T]` so that we can use equal more easily. 
+```SCALA
+// import an implicit instance of Equal[T]
+import EqualSyntax._
+
+t === q
+```
+
+Now that we know how things work to make our life easier, lets write `Ops` and `Syntax` for `Order` TypeClass.
+```
+Exercise 1.4: write OrderOps that supports these operations: <, >, <=, >=, === and also named operations for compatibility: gt, lt, gte, lte, eq
+Next write OrderSyntax.
+```
+[Checkout the answer here](samples/src/main/scala/samples/ch01/OrderSyntax.scala)
+
+## Now, scalaz
+Now that we know about TypeClasses, we can move on and start using Scalaz. At the core, Scalaz provides lots of usefull TypeClasses and various instances for common types. We can easily import Scalaz and start using it. 
+```SCALA
+    import scalaz._
+    import Scalaz._
+
+    1 =/= 2 // shouldBe true
+    1 lte 2 // shouldBe true
+
+    List(1, 2) <= List(3) // shouldBe true
+
+    12.some > none[Int] // shouldBe true
 
 ```
-These definitions and concepts may sound vague or obscure, so let's see some examples of typeclass.
-### Order
+[Checkout the sample test here](samples/src/test/scala/samples/ch01/ScalazTest.scala)
+
+As you may have guessed, Scalaz provides `Order` and `Equal` TypeClasses (plus Ops and Syntax) and also nice instances for basic types, collections, functions and many other types for us. Note that `12.some` is a special syntactic sugar provided by Scalaz to ease creating an instance of `Option[T]`.
 
