Add contramap to first chapter

--- a/ch01.md
+++ b/ch01.md
@@ -59,11 +59,10 @@ So if we want to use a TypeClass on a given type, we need a TypeClass instance f
 ## TypeClass syntax
 So let's get back to using TypeClasses. Imagine that we need to use the `Equal` TypeClass that we've defined in exercise 1.1 to compare people.
 ```SCALA
-  def peopleAreEqual(p1: Person, p2: Person): Boolean = {
-    personEqual.eq(p1, p2)
-  }
+  val p1: Person = ???
+  val p2: Person = ???
+  personEqual.eq(p1, p2)
 ```
-[Checkout the answer here](samples/src/test/scala/samples/ch01/EqualSimpleTest.scala)
 
 As you can see, even though using typeclass instances is easy, it's a little terse, specially if we have to implement `peopleAreEqual` function every single time that we need this type class and for every and each type (like Person). So let's try to generalize this function a little bit so that it would work independent of target Type.
 
@@ -71,6 +70,10 @@ As you can see, even though using typeclass instances is easy, it's a little ter
   def areEqual[T](left: T, right: T)(implicit equal: Equal[T]): Boolean = {
     equal.eq(left, right)
   }
+  // Usage:
+  val p1: Person = ???
+  val p2: Person = ???
+  println( areEqual(p1, p2) ) // It's assumed that an implicit instance of Equal[Person] exists in current scope.
 ```
 It's very simple, right? the only thing that `areEqual` does is that it uses an implicit parameter to make working with TypeClasses a little easier(some times this model is called TypeClass interface). Now let us do one final trick:
 ```SCALA
@@ -121,3 +124,29 @@ Now that we know about TypeClasses, we can move on and start using Scalaz. At th
 
 As you may have guessed, Scalaz provides `Order` and `Equal` TypeClasses (plus Ops and Syntax) and also nice instances for basic types, collections, functions and many other types for us. Note that `12.some` is a special syntactic sugar provided by Scalaz to ease creating an instance of `Option[T]`.
 
+## A taste of contramap
+We're now equiped with a technique called TypeClass, two TypeClasses (Equal and Order) and instances of these TypeClasses for lots of basic types (Int, String, etc...). But usually we use complex data structures rather than these basic types, and obviously we don't have off-the-shelf TypeClass instances for them. 
+
+Let's say we have a __Person__ data structure like this:
+```SCALA
+case class Person(id: String, name: String, age: String) // Person has lots and lots of other properties too.
+```
+What if we want an `Order` TypeClass instance for person ? The first solution that comes to our mind is obvious: Implement an instance ! (Remember that we've already defined Equal[Person])
+```TEXT
+Exercise 1.5: Implement an instance of order TypeClass for Person that orders people based on their age
+```
+[Checkout the answer here](samples/src/main/scala/samples/ch01/Exc5.scala)
+
+Note that here we've implemented the instance as a _Singleton object_ instead of a val.
+
+If you look closely at the various implementations of TypeClass instances, a pattern begins to emerge. When we're implementing an instance for a complex  data-structure (like person), sometimes we can map our complex data structure to a simpler one and then use that in our TypeClass instances. For example, in the above exercise, we see person as just an Integer that represents a person's age. Which means as long as we have an instance of Order TypeClass for Integer, we don't have to write `Order[Person]` from scratch. This technique is called `Contramap` which we'll investigate in details in later chapters.
+```TEXT
+Exercise 1.6(Hard): Try to implement Contramap for our two basic TypeClasses:
+def contramapEqual[T,U](f: T => U)(implicit Equal[U]): Equal[T]
+def contramapOrder[T,U](f: T => U)(implicit Order[U]): Order[T]
+```
+[Checkout the contramap for equal here](samples/src/test/scala/samples/ch01/EqualContramapTest.scala)
+
+[Checkout the contramap for order here](samples/src/test/scala/samples/ch01/OrderContramapTest.scala)
+
+So, this is another example of composition, we compose simple small structures to create big ones. In the next chapter we start by first building blocks from the magical `Category Theory`. 
