Chapter2: Semigroups: Init
Basic semigroup added

semigroups def and exercises

Finish chapter 2

--- a/ch01.md
+++ b/ch01.md
@@ -150,3 +150,20 @@ def contramapOrder[T,U](f: T => U)(implicit Order[U]): Order[T]
 [Checkout the contramap for order here](samples/src/test/scala/samples/ch01/OrderContramapTest.scala)
 
 So, this is another example of composition, we compose simple small structures to create big ones. In the next chapter we start by first building blocks from the magical `Category Theory`. 
+
+# The need for typeclasses
+At this point you might ask yourself 'Why bother with TypeClasses?' or 'If we want to write equality checker for two type, we'll just write it as a simple function, why writing all this confusing code like TypeClasses or instances or operations?'. Honestly, to understand true power of TypeClasses and `Category Theory`, you need to learn some more stuff, specially some patterns and structures (which we'll see soon enough). But the short answer is that these techniques help us create more powerful abstractions. It helps us define structures that are so generic that can be applied to many problems and specific enough that can really deliver value (because normally, the more abstract a structure gets, the less value it can deliver).
+
+To help you understand better, let's think about `Order` TypeClass, It's true that when you need to compare two objects of type `Person`, you just write something like `def isGreaterThan(a: Person, b: Person): Boolean` and never think about TypeClasses and their pain. But with the TypeClass approach you write an abstract code like this:
+
+```SCALA
+import OrderSyntax._
+def isMax[T](l: List[T], t: T)(implicit order: Order[T]): Boolean = l.forall(_ < t)
+```
+Which check whether a given object `t` is greater than everything in the given list `l`. It's elegant and beautiful, it's generic and you can use it on any type as long as you have a proper instance of `Order`. Although it's a really simple example (which you can easily replicate it without TypeClasses). This pattern of using TypeClasses with implicit parameters is so widely used that Scala has a special syntax for it, you can write the above code as:
+```SCALA
+import OrderSyntax._
+def isMax[T: Order](l: List[T], t: T): Boolean = l.forall(_ < t)
+```
+
+The part `T: Order` tell compiler to ensure there is an instance of `Order[T]` available implicitly, so you can ommit the implicit parameter.
