--- a/ch02.md
+++ b/ch02.md
@@ -1,34 +1,40 @@
-# Chapter 2: Basic algebraic structures
+# Chapter 2: Semigroup
 In chapter one we leared about TypeClasses, now we'll see what we can do with them. From this chapter on, we will learn some algebraic structure that are easy to learn and gives us a basic understanding about algebraic structures.
 
-# Semigroup
+## Definition
 Semigroup is the one of the most simple algebraic structure that we'll work with. Since we don't want to delve into `Category Theory`, it's suffice to say that most of these algebraic structure (especially the ones with strange names like SEMIGROUP!!!) are borrowed from `Category Theory`.
 
-Mathematically speaking, a `Semigroup` is a structure that has an associative operation function with signature `(T, T) => T`. 
+Mathematically speaking, a `Semigroup` is an aljebraic structure that has a set with an binary associative function defined on that set.
+
 Associativity means that changing order of parathesis must not affect the result, for example `+` and `*` are associative, : `(a + b) + c == a + (b + c) == a + b + c`. but `-` is not.
 
-Ok, it's a little threatening, so let's speak in our own language!
+For example (in mathemacits) the set of Integers and the function `add` form a semigroup, because add is both binary an associative. An also the set of Integers and the function `multiply` form a semigroup too. 
+
+In programming we can translate it to : A semigroup is a TypeClass defined for a type `T` with an associative function `def combine(T, T): T`.
+
+## Semigroup TypeClass
+Ok, it's a little scary, so let's speak in our own language!
 
 ```SCALA
 trait Semigroup[T] {
-    def operation(left: T, right: T): T
+    def combine(left: T, right: T): T
 }
 ```
-This is the TypeClass for semigroup. it has a binary function (with two parameters). Note that the `operation` should be associative, but at this moment there is no way to guaranty associativity at the compile time (at least not that I know of) and it's our duty to ensure it with design and tests.
+This is the TypeClass for semigroup. it has a binary function (with two parameters). Note that the `combine` should be associative, but at this moment there is no way to guaranty associativity at the compile time (at least not that I know of) and it's our duty to ensure it with design and tests.
 
 Let's implement a few `Semigroup`s to make it clear.
 ```SCALA
   implicit val intMulSemigroup = new Semigroup[Int] {
-    def operation(left: Int, right: Int): Int = left * right
+    def combine(left: Int, right: Int): Int = left * right
   }
 
   implicit val stringSemigroup = new Semigroup[String] {
-    def operation(left: String, right: String): String = left + right
+    def combine(left: String, right: String): String = left + right
   }
 
   type IntVector = (Int, Int)
   implicit val intVectorSemigroup = new Semigroup[IntVector] {
-    def operation(left: IntVector, right: IntVector): IntVector =
+    def combine(left: IntVector, right: IntVector): IntVector =
       (left._1 + right._1, left._2 + right._2)
   }
 ```
@@ -39,9 +45,83 @@ I think everything is more clear now. Note that Semigroup is a TypeClass and the
     import SemigroupSyntax._
     import BasicSemigroupInstances._
 
-    2 <> 3 shouldBe 6
-    "Hello" <> " " <> "World!" shouldBe "Hello World!"
-    (1, 1) <> (2, 3) shouldBe (3, 4)
+    2 |+| 3 shouldBe 6
+    "Hello" |+| " " |+| "World!" shouldBe "Hello World!"
+    (1, 1) |+| (2, 3) shouldBe (3, 4)
   }
 ```
 Checkout [the answer](samples/src/main/scala/samples/ch02/Ex1.scala) and also [the source code for tests](samples/src/test/scala/samples/ch02/SemigroupSyntaxTest.scala).
+
+## Semigroup with subtype polymorphism
+If you think that the title is a little bit scary, it's not. You may know _subtype polymorphism_ as generics, or parametric types, and here we want to know how to use `Semigroup` for parametric types. To better understand this concept and see the true power of abstractions using Semigroups, let's walk through an example. Remember `IntVector` from our previuos sample? It's fairly simple, we can treat any Tuple2 of integers as a vector (we call them IntVector) and we can add two IntVectors together. But in this model, we're kind of stuck with integers. What if we want Vectors of __Long__ ints ? or Doubles ? If we want to add two vectors, what types can we use other than Int, Long and Double? Think about it. When we're talking about vectors and adding them, we can use any type, as long as we can add two instances of the type together in a consistent way with rules regarding to adding vectors. For example, think of string vectors !  `('a' , 'b') + ('c' , 'd') => ('ac' , 'bd')` . This way we can easily have string vectors, BigInt vectors or anything else! So how do we implement this way of thinking ? Using Semigroup TypeClass ! Let's rewrite the previous sample in this way:
+```SCALA
+  type Vec[T] = (T, T)
+  implicit def vectorSemigroup[T](implicit semigroup: Semigroup[T]): Semigroup[Vec[T]] = new Semigroup[Vec[T]] {
+    override def combine(left: (T, T), right: (T, T)): (T, T) =
+      (semigroup.combine(left._1, right._1), semigroup.combine(left._2, right._2))
+  }
+```
+or even nicer!
+```SCALA
+  import SemigroupSyntax._
+  type Vec[T] = (T, T)
+
+  implicit def vectorSemigroup[T: Semigroup]: Semigroup[Vec[T]] = new Semigroup[Vec[T]] {
+    override def combine(left: (T, T), right: (T, T)): (T, T) =
+      (left._1 |+| right._1 , left._2 |+| right._2)
+  }
+```
+Ok let's break it down piece by piece. First we define a type alias `Vec[T]`, in Scala, type aliases are just a syntactic sugar to make working with complex types a little easier. a type alias doesn't do anything specific, it's just a reference to a definition, which means that you can replace it with the definition wherever you see it. It this example, wherever you see `Vec[T]`, you can replace it with `(T, T)`, thats it.
+
+Next we define a Semigroup instance for type `Vec[T]`. This function creates an instance of Semigroup for `Vec[T]` if you provide a Semigroup instance for type `T`. Which means for every type `T`, if you can combine two instances of `T`, it can combine two vectors of `T`, and ofcourse for combining two instances of `T` we need a `Semigroup[T]`. 
+
+We've implemented the answer in two styles, which have two differences:
+1. The way to pass implicit instance for `Semigroup[T]`: The first style uses direct implicit paramater, the second style uses Haskell-like TypeClass style : `[T: Semigroup]`
+2. Implementation: The first style directly uses the provided semigroup to combine two instances of `T`. The second style uses `SimegroupSyntax` and `SemigroupOps` which is easier to read and understand.
+
+Time for exercise! Implement an instance for `Option`, Note that in the following test we use `some and none` syntactic sugar for option (10.some) which we implemented in previous chapter, try to implement it again.
+Beware of the typing, `10.some` should produce the type `Option[Int]` not `Some[Int]`, For example if you type `val o = 10.some` and checkout the type inferred for `o`, you'll see `Option[Int]`. Here's the syntactic sugar for `none[Int]`:
+```SCALA
+  def none[T]: Option[T] = None
+```
+Note that this function produces `Option` type as well. Can you guess the reason ? It's because we want to use these values with semigroup and thus we need implicit conversion and implicit parameters, and implicit resolution in Scala compiler is not comfortable with using Option and Some interchangbly.
+
+```SCALA
+// Exercise 2: Implement an instance for Semigroup[Option[T]], so that your implementation satisfies the following test
+
+  "Option Semigroup" should "combine two options" in {
+    import BasicSemigroupInstances._
+    import SemigroupSyntax._
+    import Ex2._
+
+    (10.2, 11.3).some |+| (12.3, 13.5).some shouldBe (22.5, 24.8).some
+
+    10.some |+| 20.some shouldBe 200.some
+
+    "Something".some |+| none[String] shouldBe none[String]
+    none[String] |+| "Something".some shouldBe none[String]
+
+    none[Int] |+| none[Int] shouldBe none[Int]
+
+  }
+```
+Checkout [the answer](samples/src/main/scala/samples/ch02/Ex2.scala) and also [the source code for tests](samples/src/test/scala/samples/ch02/Ex2Test.scala).
+
+Easy, right? let's harder examples!
+```SCALA
+// Exercise 3: Implement an instance for Semigroup[Future[T]] and another one for lists!
+
+  "Semigroup[Future]" should "combine values inside futures" in {
+    import Ex3._
+    import SemigroupSyntax._
+    import BasicSemigroupInstances._
+    import scala.concurrent.ExecutionContext.Implicits.global
+    import scala.concurrent.duration._
+
+    val future = Future.successful(12 -> 24) |+| Future.successful(23 -> 42)
+    Await.result(future, 2.seconds) shouldBe (35, 66)
+
+    List(1, 2, 3) |+| List(4, 5, 6) shouldBe (1 to 6).toList
+  }
+```
+Checkout [the answer](samples/src/main/scala/samples/ch02/Ex3.scala) and also [the source code for tests](samples/src/test/scala/samples/ch02/Ex3Test.scala).
