--- a/ch02.md
+++ b/ch02.md
@@ -1,27 +1,27 @@
 # Chapter 2: Semigroup
-In chapter one we leared about TypeClasses, now we'll see what we can do with them. From this chapter on, we will learn some algebraic structure that are easy to learn and gives us a basic understanding about algebraic structures. We'll start with one of the most basic structures: `Semigroup`.
+In chapter one we learned about TypeClasses, now we'll see what we can do with them. From this chapter on, we will learn some algebraic structures that are easy to learn and gives us a basic understanding of algebraic structures. We'll start with one of the most basic structures: `Semigroup`.
 
 ## Definition
-`Semigroup` is the one of the most simple algebraic structure that we'll work with. Since we don't want to delve into `Category Theory`, it's suffice to say that most of these algebraic structure (especially the ones with strange names like SEMIGROUP!!!) are borrowed from `Category Theory`.
+`Semigroup` is one of the most simple algebraic structure that we'll work with. Since we don't want to delve into `Category Theory`,  suffice to say that most of these algebraic structures (especially the ones with strange names like SEMIGROUP!!!) are borrowed from `Category Theory`.
 
 A `Semigroup` knows how to `combine` two instances of specific type into an instance of the same type: `T, T => T`.
-Mathematically speaking, a `Semigroup` is an aljebraic structure that has a set with an binary associative function defined on that set.
+Mathematically speaking, a `Semigroup` is an algebraic structure that has a set with a binary associative function defined on that set.
 
 Associativity means that changing order of parathesis must not affect the result, for example `+` and `*` are associative, : `(a + b) + c == a + (b + c) == a + b + c`. but `-` is not.
 
-For example (in mathemacits) the set of Integers and the function `add` form a semigroup, because add is both binary an associative. An also the set of Integers and the function `multiply` form a semigroup too. 
+For example (in mathematics) the set of Integers and the function `add` form a semigroup, because add is both binary and associative. An also the set of Integers and the function `multiply` form a semigroup too. 
 
-In programming we can translate it to : A semigroup is a TypeClass defined for a type `T` with an associative function `def combine(T, T): T`.
+In programming, we can translate it to: A semigroup is a TypeClass defined for a type `T` with an associative function `def combine(T, T): T`.
 
 ## Semigroup TypeClass
-Ok, it's a little scary, so let's speak in our own language!
+Ok, it's a little scary, so let's speak in our language!
 
 ```SCALA
 trait Semigroup[T] {
     def combine(left: T, right: T): T
 }
 ```
-This is the TypeClass for semigroup. it has a binary function (with two parameters). Note that the `combine` should be associative, but at this moment there is no way to guaranty associativity at the compile time (at least not that I know of) and it's our duty to ensure it with design and tests.
+This is the TypeClass for semigroup. it has a binary function (with two parameters). Note that the `combine` should be associative, but at this moment there is no way to guaranty associativity at the compile-time (at least not that I know of) and we have to  ensure it with design and tests.
 
 Let's implement a few `Semigroup`s to make it clear.
 ```SCALA
@@ -54,7 +54,7 @@ I think everything is more clear now. Note that Semigroup is a TypeClass and the
 Checkout [the answer](samples/src/main/scala/samples/ch02/Ex1.scala) and also [the source code for tests](samples/src/test/scala/samples/ch02/SemigroupSyntaxTest.scala).
 
 ## Semigroup with subtype polymorphism
-If you think that the title is a little bit scary, it's not. You may know _subtype polymorphism_ as generics, or parametric types, and here we want to know how to use `Semigroup` for parametric types. To better understand this concept and see the true power of abstractions using Semigroups, let's walk through an example. Remember `IntVector` from our previuos sample? It's fairly simple, we can treat any Tuple2 of integers as a vector (we call them IntVector) and we can add two IntVectors together. But in this model, we're kind of stuck with integers. What if we want Vectors of __Long__ ints ? or Doubles ? If we want to add two vectors, what types can we use other than Int, Long and Double? Think about it. When we're talking about vectors and adding them, we can use any type, as long as we can add two instances of the type together in a consistent way with rules regarding to adding vectors. For example, think of string vectors !  `('a' , 'b') + ('c' , 'd') => ('ac' , 'bd')` . This way we can easily have string vectors, BigInt vectors or anything else! So how do we implement this way of thinking ? Using Semigroup TypeClass ! Let's rewrite the previous sample in this way:
+If you think that the title is a little bit scary, it's not. You may know _subtype polymorphism_ as generics, or parametric types, and here we want to know how to use `Semigroup` for parametric types. To better understand this concept and see the true power of abstractions using Semigroups, let's walk through an example. Remember `IntVector` from our previous sample? It's fairly simple, we can treat any Tuple2 of integers as a vector (we call them IntVector) and we can add two IntVectors together. But in this model, we're kind of stuck with integers. What if we want Vectors of __Long__ ints ? or Doubles? If we want to add two vectors, what types can we use other than Int, Long, and Double? Think about it. When we're talking about vectors and adding them, we can use any type, as long as we can add two instances of the type together in a consistent way with rules regarding to add vectors. For example, think of string vectors !  `('a' , 'b') + ('c' , 'd') => ('ac' , 'bd')` . This way we can easily have string vectors, BigInt vectors or anything else! So how do we implement this way of thinking ? Using Semigroup TypeClass! Let's rewrite the previous sample in this way:
 ```SCALA
   type Vec[T] = (T, T)
   implicit def vectorSemigroup[T](implicit semigroup: Semigroup[T]): Semigroup[Vec[T]] = new Semigroup[Vec[T]] {
@@ -72,20 +72,20 @@ or even nicer!
       (left._1 |+| right._1 , left._2 |+| right._2)
   }
 ```
-Ok let's break it down piece by piece. First we define a type alias `Vec[T]`, in Scala, type aliases are just a syntactic sugar to make working with complex types a little easier. a type alias doesn't do anything specific, it's just a reference to a definition, which means that you can replace it with the definition wherever you see it. It this example, wherever you see `Vec[T]`, you can replace it with `(T, T)`, thats it.
+Ok let's break it down piece by piece. First we define a type alias `Vec[T]`, in Scala, type aliases are just a syntactic sugar to make working with complex types a little easier. a type alias doesn't do anything specific, it's just a reference to a definition, which means that you can replace it with the definition wherever you see it. It this example, wherever you see `Vec[T]`, you can replace it with `(T, T)`, that's it.
 
-Next we define a Semigroup instance for type `Vec[T]`. This function creates an instance of Semigroup for `Vec[T]` if you provide a Semigroup instance for type `T`. Which means for every type `T`, if you can combine two instances of `T`, it can combine two vectors of `T`, and ofcourse for combining two instances of `T` we need a `Semigroup[T]`. 
+Next we define a Semigroup instance for type `Vec[T]`. This function creates an instance of Semigroup for `Vec[T]` if you provide a Semigroup instance for type `T`. Which means for every type `T`, if you can combine two instances of `T`, it can combine two vectors of `T`, and of course combining two instances of `T` we need a `Semigroup[T]`. 
 
 We've implemented the answer in two styles, which have two differences:
-1. The way to pass implicit instance for `Semigroup[T]`: The first style uses direct implicit paramater, the second style uses Haskell-like TypeClass style : `[T: Semigroup]`
+1. The way to pass implicit instance for `Semigroup[T]`: The first style uses direct implicit parameter, the second style uses Haskell-like TypeClass style : `[T: Semigroup]`
 2. Implementation: The first style directly uses the provided semigroup to combine two instances of `T`. The second style uses `SimegroupSyntax` and `SemigroupOps` which is easier to read and understand.
 
 Time for exercise! Implement an instance for `Option`, Note that in the following test we use `some and none` syntactic sugar for option (10.some) which we implemented in previous chapter, try to implement it again.
-Beware of the typing, `10.some` should produce the type `Option[Int]` not `Some[Int]`, For example if you type `val o = 10.some` and checkout the type inferred for `o`, you'll see `Option[Int]`. Here's the syntactic sugar for `none[Int]`:
+Beware of the typing, `10.some` should produce the type `Option[Int]` not `Some[Int]`, For example, if you type `val o = 10.some` and checkout the type inferred for `o`, you'll see `Option[Int]`. Here's the syntactic sugar for `none[Int]`:
 ```SCALA
   def none[T]: Option[T] = None
 ```
-Note that this function produces `Option` type as well. Can you guess the reason ? It's because we want to use these values with semigroup and thus we need implicit conversion and implicit parameters, and implicit resolution in Scala compiler is not comfortable with using Option and Some interchangbly.
+Note that this function produces `Option` type as well. Can you guess the reason ? It's because we want to use these values with semigroup and thus we need implicit conversion and implicit parameters, and implicit resolution in Scala compiler is not comfortable with using Option and Some interchangeably.
 
 ```SCALA
 // Exercise 2: Implement an instance for Semigroup[Option[T]], so that your implementation satisfies the following test
@@ -128,9 +128,9 @@ Easy, right? let's harder examples!
 Checkout [the answer](samples/src/main/scala/samples/ch02/Ex3.scala) and also [the source code for tests](samples/src/test/scala/samples/ch02/Ex3Test.scala).
 
 ## More applications
-Despite being simple, Semigroups have many powerfull applications. One the most useful appliatications of Semigroups is a concept called `Reduction`. Reduction is the process of combining many objects into a single one. For example when you have a list of integers, you can reduce it into a single one by summing (or multiplying) all of them. Reduction is one of the core functions in Map-Reduce (hence the name) which has powered the big data engines for years. Note that you can't use just any `T, T => T` as a reduction function. Think for a minute, what makes Semigroup so special? What is the main difference between a Semigroup and the little binary function `T, T => T` ? Why does it matter so much in the big data world ? Try to guese the answer before reading the next passage.
+Despite being simple, Semigroups have many powerful applications. One of the most useful applications of Semigroups is a concept called `Reduction`. Reduction is the process of combining many objects into a single one. For example, when you have a list of integers, you can reduce it into a single one by summing (or multiplying) all of them. Reduction is one of the core functions in Map-Reduce (hence the name) which has powered the big data engines for years. Note that you can't use just any `T, T => T` as a reduction function. Think for a minute, what makes Semigroup so special? What is the main difference between a Semigroup and the little binary function `T, T => T`? Why does it matter so much in the big data world? Try to guess the answer before reading the next passage.
 
-If you look back at the `Semigroup`'s definition above, the only thing that differentiates between a simple binary function and a semigroup is associativity! That's right!! Why on earth do you ask ? Because when our binary operation is associative, it means that we can run our operations in parallel. Let's say we want to reduce `1, 2, 3, 4` with `+` (e.g. you can't use `-` because it's not associative and the result changes by changing the order of execution, try it), sinc summing is associative we can sum `1,2` in one thread and `3,4` in another thread in parallel and then reduce it one more time to form the final result, the reduction process looks something like this
+If you look back at the `Semigroup`'s definition above, the only thing that differentiates between a simple binary function and a semigroup is associativity! That's right!! Why on earth do you ask? Because when our binary operation is associative, it means that we can run our operations in parallel. Let's say we want to reduce `1, 2, 3, 4` with `+` (e.g. you can't use `-` because it's not associative and the result changes by changing the order of execution, try it), since summing is associative we can sum `1,2` in one thread and `3,4` in another thread in parallel and then reduce it one more time to form the final result, the reduction process looks something like this
 ```
 1, 2, 3, 4
     =>
@@ -138,9 +138,9 @@ If you look back at the `Semigroup`'s definition above, the only thing that diff
     =>
     10
 ```
-Our tiny list of four numbers may look innocent and you might ask why bother summing them in parallel, but when you have millions and millions and millions of numbers that won't even fit in a single server, reduction process is inevitable. And the good news is with Semigroup, it doesn't matter what is the operation or what is the type, you can reduce anything as long as you can define a `Semigroup` instance for it! 
+Our tiny list of four numbers may look innocent and you might ask why bothering summing them in parallel, but when you have millions and millions and millions of numbers that won't even fit in a single server, the reduction process is inevitable. And the good news is with Semigroup, it doesn't matter what is the operation or what is the type, you can reduce anything as long as you can define a `Semigroup` instance for it! 
 
-Ok, enough talk! let's test it. Try to implement a simple (non-parallel) reduction operation that reduces a list, the result is optional since we can't reduce an empty list. Note that Scala's default implementation of reduce returns a concrete result instead of an optional one and throws execption for empty inputs.
+Ok, enough talk! let's test it. Try to implement a simple (non-parallel) reduction operation that reduces a list, the result is optional since we can't reduce an empty list. Note that Scala's default implementation of reduce returns a concrete result instead of an optional one and throws an execption for empty inputs.
 
 ```SCALA
   // Exercise 4: Implement reduce function:
