--- a/ch02.md
+++ b/ch02.md
@@ -4,7 +4,7 @@ In chapter one we learned about TypeClasses, now we'll see what we can do with t
 ## Definition
 `Semigroup` is one of the most simple algebraic structure that we'll work with. Since we don't want to delve into `Category Theory`,  suffice to say that most of these algebraic structures (especially the ones with strange names like SEMIGROUP!!!) are borrowed from `Category Theory`.
 
-A `Semigroup` knows how to `combine` two instances of specific type into an instance of the same type: `T, T => T`.
+A `Semigroup` knows how to `combine` two instances of a specific type into an instance of the same type: `T, T => T`.
 Mathematically speaking, a `Semigroup` is an algebraic structure that has a set with a binary associative function defined on that set.
 
 Associativity means that changing order of parathesis must not affect the result, for example `+` and `*` are associative, : `(a + b) + c == a + (b + c) == a + b + c`. but `-` is not.
